# mlx-profiler

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  manual_recording.py
mlx_profiler/: __init__.py  cli.py  profiler.py  report.py  trace.py
